# kagi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  build.rs  test.txt
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/icon/: AppIcon.icns
assets/linux/: com.tomixrm.kagi.desktop  kagi.desktop
ci/: check-loc.sh  loc-baseline.txt
crates/kagi-domain/: Cargo.toml
crates/kagi-domain/src/: activity.rs  branch_cleanup.rs  checklist.rs  commit.rs  coupling_graph.rs  diff.rs  diffstat.rs  file_history.rs  graph.rs  head.rs  history.rs  hotspot.rs  hotspot_layout.rs  hotspot_report.rs  lib.rs  message.rs  message_gen.rs  message_template.rs  operation.rs  plan.rs  plan_note.rs  pr_url.rs  refs.rs  remote.rs  remote_diff.rs  remote_snapshot.rs  resolution.rs  status.rs  trailers.rs  update.rs
crates/kagi-domain/src/plan_note/: branch.rs  checklist.rs  checkout.rs  cherry_revert.rs  cleanup.rs  commit.rs  common.rs  conflicts.rs  discard.rs  force_lease.rs  history.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  remote_branch.rs  reset.rs  stash.rs  switch.rs  tag.rs  worktree.rs
crates/kagi-git/: Cargo.toml
crates/kagi-git/src/: backend.rs  checklist.rs  cli.rs  conflicts.rs  diff.rs  drafts.rs  file_history.rs  hotspot.rs  lib.rs  message_gen.rs  oplog.rs  oplog_adr0129_tests.rs  refs.rs  resolution.rs  snapshot.rs  staging.rs  status.rs  worker.rs
crates/kagi-git/src/ops/: branch.rs  branch_cleanup.rs  checkout.rs  cherry_revert.rs  discard.rs  fetch.rs  force_lease.rs  history.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  remote_branch.rs  remote_common.rs  reset.rs  stash.rs  switch.rs  tag.rs  worktree.rs
crates/kagi-git/tests/: ecosystem_test.rs
crates/kagi-ui-core/: Cargo.toml
crates/kagi-ui-core/src/: divider.rs  file_tree.rs  fonts.rs  i18n.rs  klog.rs  lib.rs  settings.rs  theme.rs  theme_apple.rs  time.rs
crates/kagi-ui-core/src/i18n/: mod.rs
crates/kagi-ui-core/src/i18n/plan/: branch.rs  checklist.rs  checkout.rs  cherry_revert.rs  cleanup.rs  commit.rs  common.rs  conflicts.rs  discard.rs  force_lease.rs  history.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  remote_branch.rs  reset.rs  stash.rs  switch.rs  tag.rs  worktree.rs
crates/kagi-ui-ecosystem/: Cargo.toml
crates/kagi-ui-ecosystem/src/: graph.rs  lib.rs  lists.rs  mermaid_url.rs  render.rs
crates/kagi-ui-editor/: Cargo.toml
crates/kagi-ui-editor/src/: lib.rs  markdown.rs
crates/kagi-ui-file-history/: Cargo.toml
crates/kagi-ui-file-history/src/: detail.rs  lib.rs  render.rs
crates/kagi-web/: Cargo.toml
crates/kagi-web/src/: lib.rs
crates/kagi-web/web/: index.html
docs/: RELEASING.md  architecture-cleanup-roadmap.md  architecture.md  codebase-review.md  file-history-task.md  git-safety-checklist.md  handoff-2026-06-21-session2.md  handoff-claude-phase-c-d.md  linux-development.md  performance-review.md  refactor-plan.md  remote-ssh-verification.md  requirements-branch-context-menu.md  requirements-commit-suite.md  requirements-conflict-ux.md  requirements-context-menu.md  requirements-diffstat.md  requirements-gk-parity.md  requirements-shell.md  requirements.md
docs/adr/: 0001-gpui.md  0002-git-backend.md  0003-graph-layout.md  0004-destructive-operation-policy.md  0005-conflict-resolution-policy.md  0006-gpui-component.md  0007-bottom-panel.md  0008-terminal-integration.md  0009-toolbar-operation-policy.md  0010-ahead-behind.md  0011-undo-commit.md  0012-app-shell-responsibilities.md  0013-header-toolbar-ux.md  0014-repository-navigator.md  0015-commit-inspector.md  0016-changed-files-and-diff.md  0017-bottom-panel-behavior.md  0018-status-bar-summary.md  0019-snapshot-refresh-policy.md  0020-commit-context-menu.md  0021-contextual-availability.md  0022-plan-integration-context-menu.md  0023-dangerous-operations-policy.md  0024-reset-semantics.md  0025-worktree-creation-ux.md  0026-compare-view-model.md  0027-repository-tabs.md  0028-repository-picker.md  0029-command-registry-menubar.md  0030-async-repo-loading.md  0031-external-code-reuse-policy.md  0032-jj-concepts-adoption.md  0033-gitbutler-concepts-adoption.md  0034-zed-gpui-component-reuse.md  0035-vendor-gpui-terminal.md  0036-color-themes.md  0037-github-avatars.md  0038-app-bundling.md  0039-commit-operation-safety-policy.md  0040-amend-semantics.md  (+95 more)
docs/rearch/: architecture.md  inventory.md
docs/releases/: v0.6.0.md
docs/research/: conflict-ux-editors.md  conflict-ux-gui-clients.md  conflict-ux-models.md  gitbutler-reuse-research.md  gitcomet-comparison.md  github-pr-integration.md  gpui-component-audit.md  jj-reuse-research.md  openlogi-learnings.md  qa-audit-matrix.md  rgitui-learnings.md  zed-gpui-reuse-research.md
docs/tickets/: INDEX.md  ROADMAP-REARCH-2026Q2.md  T-AUTOUPDATE-001.md  T-BCM-001.md  T-BCM-002.md  T-BCM-003.md  T-BCM-004.md  T-BCM-005.md  T-BCM-006.md  T-BCM-010.md  T-BCM-011.md  T-BCM-012.md  T-BCM-013.md  T-BCM-014.md  T-BCM-020.md  T-BCM-021.md  (+255 more)
e2e/: package-lock.json  package.json  playwright.config.ts
scripts/: build-web.sh  gen_homebrew_formula.sh  install_linux_desktop.sh  instance_noto.py  make_blink_fixture.sh  make_fixture.sh  make_icon.sh  round_icon.swift
src/: headless.rs  lib.rs  main.rs  single_instance.rs
tests/: amend_test.rs  branch_cleanup_test.rs  branch_menu_ops_test.rs  branch_sync_test.rs  checklist_test.rs  compare_test.rs  conflicts_test.rs  delete_branch_test.rs  delete_remote_branch_test.rs  desktop_integration_test.rs  diff_test.rs  diffstat_test.rs  discard_test.rs  drafts_test.rs  drag_merge_test.rs  fetch_remote_branch_test.rs  file_history_test.rs  force_lease_push_test.rs  graph_layout_test.rs  i18n_test.rs  log_test.rs  message_gen_test.rs  message_template_test.rs  oplog_test.rs  ops_test.rs  pull_test.rs  push_test.rs  qa_audit_test.rs  rebase_current_onto_test.rs  remote_ssh_live_test.rs  reset_current_test.rs  revert_test.rs  snapshot_test.rs  staging_test.rs  stash_pop_test.rs  status_test.rs  trailers_test.rs  undo_redo_test.rs  undo_test.rs  worktree_test.rs
xtask/: Cargo.toml
(+159 files in other folders)
