[workspace]
# ADR-0047 authorizes adding the xtask build/bundle helper as a workspace member.
# ADR-0072 (v1.0 re-architecture): crates/* host the layered workspace; the pure
# `kagi-domain` crate is the first extracted layer (strangler migration).
members = ["xtask", "crates/kagi-domain"]

[package]
name = "kagi"
version = "0.5.0"
license = "MIT"
edition = "2021"

[dependencies]
# Pure domain layer (ADR-0072). The git2-using code in src/git/ depends on it
# for the commit/graph types; git2 itself stays out of kagi-domain.
kagi-domain = { path = "crates/kagi-domain" }
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-terminal = { path = "vendor/gpui-terminal" }  # vendored fork (ADR-0035): selection/copy not yet upstream
portable-pty = "0.9"
git2 = { version = "0.21", default-features = false }
notify = "7"
# W11-AVATAR (ADR-0037): blocking HTTP for GitHub avatar fetch. gpui 0.2.2 ships
# only the `gpui_http_client` *trait* crate (NullHttpClient by default; no
# concrete network client published), so a small blocking client is required.
# rustls-tls reuses the rustls 0.23 / ring already present via gpui's tree.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Auto-update (ADR-0082): SHA-256 verification of downloaded release assets, and
# tempfiles for the download staging area (also used by tests).
sha2 = "0.10"
tempfile = "3"
# Typed settings persistence (issue #13 P4, ADR-0091): a real JSON parser for
# settings.json replaces the hand-rolled string scanner and preserves unknown
# keys on write. Both crates are already in the tree via gpui.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Distributed/release builds run compute-heavy paths (tree-sitter highlighting,
# git2 diffs, commit-graph layout), so tune past Cargo's default release profile
# (opt-level=3, lto=off, codegen-units=16) for faster runtime + a smaller binary.
# Trade-off: longer link time in CI. Applies workspace-wide (this is the root).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# `cargo run` (debug) builds the whole GPUI rendering/text-shaping/layout stack
# at opt-level 0, which makes the UI sluggish every frame even though our own
# code compiles fast. Optimize only those hot lower-level crates to opt-level 3
# (mirrors the gpui-component catalog) so debug runs stay snappy without slowing
# incremental rebuilds of kagi's own code. First build recompiles these crates.
[profile.dev.package]
gpui        = { opt-level = 3 }
taffy       = { opt-level = 3 }
resvg       = { opt-level = 3 }
rustybuzz   = { opt-level = 3 }
ttf-parser  = { opt-level = 3 }
cosmic-text = { opt-level = 3 }
swash       = { opt-level = 3 }
zeno        = { opt-level = 3 }
smol        = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ropey       = { opt-level = 3 }
