[workspace]
# ADR-0047 authorizes adding the xtask build/bundle helper as a workspace member.
# ADR-0072 (v1.0 re-architecture): crates/* host the layered workspace; the pure
# `kagi-domain` crate is the first extracted layer (strangler migration).
members = ["xtask", "crates/kagi-domain", "crates/kagi-git", "crates/kagi-ui-core", "crates/kagi-ui-ecosystem", "crates/kagi-ui-editor", "crates/kagi-ui-file-history", "crates/kagi-web"]

[package]
name = "kagi"
version = "0.12.0"
license = "MIT"
description = "Safety-first, commit-graph Git GUI client built with GPUI"
edition = "2021"

[dependencies]
# Pure domain layer (ADR-0072). The git2-using code in kagi-git depends on it
# for the commit/graph types; git2 itself stays out of kagi-domain.
kagi-domain = { path = "crates/kagi-domain" }
# Git backend layer (ADR-0072 / Phase E): the extracted `kagi-git` crate is the
# only place `git2::Repository` is opened. The bin's `kagi::git` shim and the
# `src/remote` module re-export it; UI code reaches Git through `kagi_git::`.
kagi-git = { path = "crates/kagi-git" }
# Shared UI foundation (ADR-0121 C1): klog macro, settings, i18n, theme.
kagi-ui-core = { path = "crates/kagi-ui-core" }
# Feature pane crates (ADR-0121 C2+): Git-free; the bin owns the data feed.
kagi-ui-ecosystem = { path = "crates/kagi-ui-ecosystem" }
kagi-ui-editor = { path = "crates/kagi-ui-editor" }
kagi-ui-file-history = { path = "crates/kagi-ui-file-history" }
# zed main git deps (crates.io gpui is frozen at 0.2.2 / 2025-10). No `rev` on
# the zed crates: gpui-component tracks zed's default branch rev-less, and a
# rev-pinned dep would be a *different source* to cargo → two gpui crates and
# type mismatches. The actual pin lives in Cargo.lock; bump deliberately with
# `cargo update -p gpui` + a matching gpui-component rev.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b004e595cf5d", features = ["tree-sitter-languages"] }
gpui-terminal = { path = "vendor/gpui-terminal" }  # vendored fork (ADR-0035): selection/copy not yet upstream
portable-pty = "0.9"
git2 = { version = "0.21", default-features = false }
notify = "7"
# W11-AVATAR (ADR-0037): blocking HTTP for GitHub avatar fetch. gpui 0.2.2 ships
# only the `gpui_http_client` *trait* crate (NullHttpClient by default; no
# concrete network client published), so a small blocking client is required.
# rustls-tls reuses the rustls 0.23 / ring already present via gpui's tree.
ureq = { version = "3", default-features = false, features = ["rustls"] }
# ADR-0123: encode author emails for the GitHub user-search query (already in
# the tree via gpui's url crate).
percent-encoding = "2"
# Auto-update (ADR-0082): SHA-256 verification of downloaded release assets, and
# tempfiles for the download staging area (also used by tests).
sha2 = "0.10"
tempfile = "3"
# Typed settings persistence (issue #13 P4, ADR-0091): a real JSON parser for
# settings.json replaces the hand-rolled string scanner and preserves unknown
# keys on write. Both crates are already in the tree via gpui.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local wall-clock for the footer / oplog timestamps (ADR: locale-aware time).
# Already in the tree transitively; `clock` pulls iana-time-zone for a
# soundness-safe local UTC offset (no localtime_r footgun in this MT app).
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Windows-only: embeds assets/icon/icon.ico into kagi.exe's resources via
# build.rs. No-op (unused) on other targets.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Distributed/release builds run compute-heavy paths (tree-sitter highlighting,
# git2 diffs, commit-graph layout), so tune past Cargo's default release profile
# (opt-level=3, lto=off, codegen-units=16) for faster runtime + a smaller binary.
# Trade-off: longer link time in CI. Applies workspace-wide (this is the root).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# `cargo run` (debug) builds the whole GPUI rendering/text-shaping/layout stack
# at opt-level 0, which makes the UI sluggish every frame even though our own
# code compiles fast. Optimize only those hot lower-level crates to opt-level 3
# (mirrors the gpui-component catalog) so debug runs stay snappy without slowing
# incremental rebuilds of kagi's own code. First build recompiles these crates.
[profile.dev.package]
gpui        = { opt-level = 3 }
taffy       = { opt-level = 3 }
resvg       = { opt-level = 3 }
rustybuzz   = { opt-level = 3 }
ttf-parser  = { opt-level = 3 }
cosmic-text = { opt-level = 3 }
swash       = { opt-level = 3 }
zeno        = { opt-level = 3 }
smol        = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ropey       = { opt-level = 3 }

# ── Debian package (cargo-deb) ─────────────────────────────────────────────
# Built in release.yml's Linux legs with `cargo deb --no-build` after the
# release binary exists. Produces target/dist/kagi_<ver>-1_<arch>.deb.
[package.metadata.deb]
maintainer = "TomiXRM <20753105+TomiXRM@users.noreply.github.com>"
copyright = "2026, TomiXRM"
extended-description = "Safety-first, commit-graph Git GUI client built with GPUI."
section = "vcs"
depends = "$auto"
# Noto CJK is the family cosmic-text's per-script fallback asks for by name;
# without it CJK glyphs fall back to whatever random font covers them.
recommends = "fonts-noto-cjk"
assets = [
    ["target/release/kagi", "usr/bin/", "755"],
    ["assets/linux/kagi.desktop", "usr/share/applications/", "644"],
    ["assets/icon/icon_512x512.png", "usr/share/icons/hicolor/512x512/apps/kagi.png", "644"],
]

# ── Dependency patches ─────────────────────────────────────────────────────
# cosmic-text Han-unification locale fix (Ubuntu ja-JP kanji rendered with SC
# glyph forms). Same one-commit patch as before, rebased 0.14 → 0.19 for the
# zed-main migration. Drop once upstream PR pop-os/cosmic-text#522 ships in a
# release that gpui pulls in.
[patch.crates-io]
cosmic-text = { git = "https://github.com/TomiXRM/cosmic-text", branch = "fix-han-unification-0.19" }
# Cosmetic gpui / gpui-component fork patches (rounded text-run highlight
# backgrounds; heading_top_gap on TextViewStyle) were dropped in the zed-main
# migration; re-add by rebasing the forks if the polish is missed.
